# git-issue

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  pr.yml  release.yml  rust.yml
.gitissues/: config.yaml  users.yaml
.gitissues/issues/0000000001/: description.md  meta.yaml
.gitissues/issues/0000000002/: description.md  meta.yaml
.gitissues/issues/0000000003/: description.md  meta.yaml
.gitissues/issues/0000000004/: description.md  meta.yaml
.gitissues/issues/0000000005/: description.md  meta.yaml
.gitissues/issues/0000000006/: description.md  meta.yaml
.gitissues/issues/0000000007/: description.md  meta.yaml
.gitissues/issues/0000000008/: description.md  meta.yaml
.gitissues/issues/0000000009/: description.md  meta.yaml
.gitissues/issues/0000000010/: description.md  meta.yaml
.gitissues/issues/0000000011/: description.md  meta.yaml
.gitissues/issues/0000000012/: description.md  meta.yaml
config/: config-default.yaml  settings-default.yaml  users-default.yaml
src/: cli.rs  edit.rs  init.rs  lib.rs  link.rs  list.rs  main.rs  model.rs  new.rs  remove.rs  search.rs  set.rs  show.rs  state.rs
src/cli/: cli.rs  main.rs  util.rs
src/cmd/: edit.rs  init.rs  link.rs  list.rs  mod.rs  model.rs  new.rs  set.rs  show.rs  util.rs
src/web/: main.rs
src/web/templates/: list.html
tests/: integration_test.rs  integration_tests.rs  link_tests.rs  list_tests.rs  new_tests.rs  set_tests.rs  show_tests.rs
tests/common/: mod.rs
tests/includes/: show_empty.md  show_metadata.md  show_metadata_wider.md
(+91 files in other folders)
